# network-indexer-services

./: .dockerignore  .env_template  .eslintrc  .eslintrc.js  .gitignore  .lintstagedrc  .npmignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  debug_test_proxy.sh  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json  rush.json  tsconfig.json  ttt.js
.github/actions/create-prerelease/: action.yml
.github/workflows/: coordinator-docker-dev.yml  coordinator-docker-prod.yml  coordinator-docker.yml  discord.yml  docker-dev.yml  docker-prod.yml  pr.yml  prerelease.yml  proxy-docker-dev.yml  proxy-docker-prod.yml  proxy-docker.yml  release.yml
.github/workflows/scripts/: coordinatorVersion.sh  proxyVersion.sh
apps/indexer-admin/: .env  .env.development  .eslintrc  README.md  TODO.md  craco.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
apps/indexer-admin/public/: index.html  manifest.json
apps/indexer-admin/src/: App.css  App.tsx  env.d.ts  index.css  index.tsx  react-app-env.d.ts  reportWebVitals.ts
apps/indexer-admin/src/components/: Icon.tsx  accountCard.tsx  alertView.tsx  asyncRender.tsx  avatar.tsx  baseLineCharts.tsx  formItem.tsx  introductionView.tsx  loading.tsx  logView.tsx  modalView.tsx  popupView.tsx  (+4 more)
apps/indexer-coordinator/: .eslintrc.js  README.md  package.json
apps/indexer-coordinator/dev/: docker-compose.yml  ipfs.sh
apps/indexer-coordinator/scripts/: copy-resources.sh  mock-projects.sh  start-testnet.sh
apps/indexer-coordinator/src/: admin.controller.ts  agreement.controller.ts  app.module.ts  data-source.ts  main.ts  migration.config.ts  monitor.controller.ts  sync.ts  yargs.ts
apps/indexer-coordinator/test/: app.e2e-spec.ts  over-allocation.test.ts
apps/indexer-proxy/: README.md
apps/indexer-proxy/doc/: API.md  error-code-dictionary.md
apps/indexer-proxy/proxy/: .dockerignore  Cargo.toml  Dockerfile
apps/indexer-proxy/proxy/examples/: agreement-query.rs  extend-channel.rs  free-query.rs  mock-open.rs  p2p-query.rs  p2p-query.rs.bak
apps/indexer-proxy/proxy/src/: account.rs  ai.rs  auth.rs  cli.rs  contracts.rs  graphql.rs  main.rs  metrics.rs  monitor.rs  p2p.rs  payg.rs  primitives.rs  project.rs  response.rs  sentry_log.rs  server.rs  subscriber.rs  websocket.rs  whitelist.rs
apps/indexer-proxy/proxy/src/metadata/: ai.rs  mod.rs  rpc_evm.rs  rpc_substrate.rs  subgraph.rs  subquery.rs  thegraph.rs
apps/indexer-proxy/proxy/src/mod_libp2p/: behavior.rs  message.rs  mod.rs  network.rs
apps/indexer-proxy/utils/: Cargo.toml  HEADER-GPL3
apps/indexer-proxy/utils/src/: constants.rs  eip712.rs  error.rs  lib.rs  p2p.rs  payg.rs  price_oracle.rs  request.rs  tools.rs  traits.rs  types.rs
common/autoinstallers/rush-husky/: package.json  pnpm-lock.yaml
common/config/rush/: .npmrc  command-line.json  pnpm-lock.yaml
common/git-hooks/: pre-commit
compose-files/: template.yml
deploy/: README.md  auto-upgrade-tool.sh  coordinator-migration-tool.sh  docker-compose-testnet.yml  docker-compose.yml  update.txt
deploy/ipfs/: ipfs.sh
deploy/metrics/: docker-compose-metrics.yml  prometheus.yml
deploy/metrics/dashboards/: grafana.json
deploy/metrics/datasources/: datasource.yml
dev/: Dockerfile  db-compose.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  docker-db.yml  init-user-db.sh
docker/dev/: .env.example  1_install.sh  2_start.sh  README.md  docker-compose.yml
docker/dev/ipfs/: ipfs.sh
docker/test/: docker-compose.yml
docker/test/ipfs/: ipfs.sh
indexer-admin/: asset-manifest.json  env.js  index.html
indexer-admin/static/css/: 2.124bb222.chunk.css  2.124bb222.chunk.css.map  main.50030db1.chunk.css  main.50030db1.chunk.css.map
indexer-admin/static/js/: 2.1cc90a92.chunk.js.LICENSE.txt  3.6b6b5a8e.chunk.js  3.6b6b5a8e.chunk.js.map  main.1fc6cf19.chunk.js  main.1fc6cf19.chunk.js.map  runtime-main.dc82e0fd.js  runtime-main.dc82e0fd.js.map
scripts/: copy-resources.sh  create-table.sh  deploy-contract.sh  mock-projects.sh  start-db.sh
src/: admin.controller.ts  agreement.controller.ts  app.module.ts  data-source.ts  main.ts  monitor.controller.ts  sync.ts  yargs.ts
src/account/: account.model.ts  account.module.ts  account.resolver.ts  account.service.ts
src/account/test/: account.resolver.spec.ts  account.service.spec.ts
src/chain/: chain.model.ts  chain.module.ts  chain.service.ts
src/cli/: cli.command.ts  cli.module.ts
src/configure/: configure.module.ts
src/contract/: deployment.ts
src/core/: account.service.ts  contract.service.ts  core.module.ts  network.service.ts  query.service.ts  service.resolver.ts
src/db/: db.module.ts
src/metrics/: coordinator.metric.service.ts  event.listener.ts  events.ts  metrics.model.ts  metrics.module.ts  metrics.resolver.ts  promProviders.ts  public.metric.service.ts  user.metric.service.ts  versions.service.ts
src/migration/: 1687000788908-init.ts  1688676100216-addAgentPayg.ts
src/payg/: pagy.sync.service.ts  payg.model.ts  payg.module.ts  payg.query.service.ts  payg.resolver.ts  payg.service.ts  payg.sync.service.ts
src/payg/test/: payg.service.spec.ts
src/project/: contract.service.ts  docker.registry.service.ts  docker.service.ts  ipfs.service.ts  metrics.service.ts  network.service.ts  port.service.ts  project.model.ts  project.module.ts  project.resolver.ts  project.service.ts  query.service.ts  report.service.ts  types.ts
src/project/test/: project.resolver.spec.ts  project.service.spec.ts
src/services/: constant.ts  contract.service.ts  docker.registry.service.ts  docker.service.ts  metrics.service.ts  network.service.ts  query.service.ts  service.resolver.ts  services.module.ts  types.ts
src/subscription/: subscription.service.ts
src/utils/: contractSDK.ts  docker.ts  encrypt.ts  encrypto.ts  localnet.json  localnet.ts  logger.ts  project.ts  promise.spec.ts  promise.ts  queries.ts  subscription.ts  template.yml
tasks/: .env-template  .gitignore  Cargo.toml
tasks/src/: models.rs  state-channel.rs
test/: app.e2e-spec.ts  mockData.ts
(+243 files in other folders)
