[package]
name = "subql-tasks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state-channel"
path = "src/state-channel.rs"

[dependencies]
subql-contracts = { git = "https://github.com/subquery/network-contracts", branch = "kepler-network" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
ethers = { version = "0.17", features = ["abigen", "ws", "openssl"] }
