[package]
name = "subql-tasks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state-channel"
path = "src/state-channel.rs"

[dependencies]
ethers = { version = "0.17", features = ["abigen", "ws", "openssl"] }
bs58 = "0.4"
dotenv = "0.15"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres" ] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
subql-contracts = { git = "https://github.com/subquery/network-contracts", branch = "kepler-network" }
