[package]
name = "subql-indexer-proxy"
version = "2.9.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
axum = { version = "0.7", features = ["ws"] }
axum-auth = "0.7"
axum-streams = { version = "0.19", features = ["text"] }
base64 = "0.22"
bincode = "1.3"
cached = "0.53.1"
chamomile_types = "0.10"
chrono = "0.4"
digest = '0.10'
ethers = { git = "https://github.com/gakonst/ethers-rs.git", tag = "ethers-v2.0.7" }
futures-util = "0.3.30"
hex = "0.4"
jsonwebtoken = "9.1"
once_cell = "1.12"
prometheus-client = "0.22"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
reqwest-streams = { version = "0.8", features = ["json"] }
rustls-webpki = "0.102"
sentry = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with ={ version = "3.0", features = ["json"] }
sha2 = '0.10'
solana-client = "2.2"
solana-sdk = "2.2"
solana-transaction-status-client-types = "2.2"
structopt = "0.3"
subql-contracts = { git = "https://github.com/subquery/network-contracts", tag = "v1.6.0" }
subql-indexer-utils = { version = "2", path = "../utils" }
sysinfo = "0.33"
tdn = { version = "0.10", default-features = false, features = ["multiple"] }
tokenizers = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
