[package]
name = "subql-indexer-utils"
version = "1.3.0"
edition = "2021"

[dependencies]
subql-contracts = { git = "https://github.com/subquery/network-contracts" }
axum = "0.6"
bincode = "1.3"
blake3="1.3"
bs58 = "0.5"
hex = "0.4"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rustc-hex = "2.1"
once_cell = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "3.0", features = ["json"] }
uint = "0.9"
ethers = { git = "https://github.com/gakonst/ethers-rs.git", tag = "ethers-v2.0.7" }
ethereum-types = "0.14"