[package]
name = "subql-indexer-utils"
version = "2.1.0"
edition = "2021"

[dependencies]
subql-contracts = { git = "https://github.com/subquery/network-contracts", tag = "v1.3.0" }
axum = "0.7"
bincode = "1.3"
blake3="1.3"
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
rand_chacha = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rustc-hex = "2.1"
once_cell = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "3.0", features = ["json"] }
uint = "0.9"
ethers = { git = "https://github.com/gakonst/ethers-rs.git", tag = "ethers-v2.0.7" }
ethereum-types = "0.14"
http = "1.1.0"
libp2p = { version = "0.54.0", features = ["gossipsub", "kad", "mdns", "request-response", "tokio", "identify", "cbor", "serde", "noise", "pnet", "tcp", "yamux", "quic"] }
libp2p-stream = "0.2.0-alpha"
either = "1.13.0"
