[package]
name = "subql-indexer-utils"
version = "2.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.22"
bincode = "1.3"
blake3 = "1.3"
bs58 = "0.5"
ethereum-types = "0.15"
ethers = { git = "https://github.com/gakonst/ethers-rs.git", tag = "ethers-v2.0.7" }
hex = "0.4"
http = "1.1.0"
native-tls = "0.2.12"
once_cell = "1.12"
rand_chacha = "0.3"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
rustc-hex = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with ={ version = "3.0", features = ["json"] }
subql-contracts = { git = "https://github.com/subquery/network-contracts", tag = "v1.6.0" }
uint = "0.10"
